# gamecube-examples

./: Makefile  gamecube.pnproj
MemCardDemo/: .cvsignore  Makefile  MemCardDemo.pnproj  MemCardDemo.prj
MemCardDemo/include/: input.h
MemCardDemo/source/: input.c  main.c
acube/: .cvsignore  Makefile  acube.dev  acube.pnproj  acube.prj  gamecube.mak
acube/source/: acube.c  acube.cpp
audio/modplay/: Makefile
audio/modplay/source/: template.c
audio/mp3player/: Makefile
audio/mp3player/source/: template.c
audio/oggplayer/: Makefile
audio/oggplayer/source/: oggplayer.c  template.c
consoletest/: .cvsignore  Makefile  console.prj  consoletest.pnproj
consoletest/source/: main.c
devices/: Makefile
devices/MemCardDemo/: MemCardDemo.prj
devices/MemCardDemo/source/: main.c
devices/dvd/: Makefile
devices/dvd/readsector/: Makefile  readsector.pnproj
devices/memcard/MemCardDemo/: Makefile  MemCardDemo.prj
devices/usbgecko/: Makefile
filesystem/directory/: Makefile  directory.pnproj
graphics/: Makefile
graphics/gx/: Makefile
gx_demo/: .cvsignore  Makefile  gx_demo.dsp  gx_demo.prj  gx_demo.tws
gx_demo/include/: spaceship.h  texture.h
gx_demo/modules/: beast3.mod
gx_demo/source/: gx_demo.cpp
system/arena1override/: Makefile
template/: Makefile  template.pnproj
template/source/: main.c  template.c
templates/application/: CMakeLists.txt  Makefile
texturetest/: .cvsignore  Makefile  texture.prj
texturetest/source/: picture.S  texture.c  texture.cpp
triangle/: .cvsignore  Makefile  triangle.prj
triangle/source/: triangle.c
(+80 files in other folders)
